# samplesheet-parser

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  copilot-instructions.md
docs/: api.md  ci.md  cli.md  contributing.md  examples.md  index.md  installation.md  requirements.txt
docs/guide/: conversion.md  diffing.md  filtering.md  index_utils.md  merging.md  parsing.md  quickstart.md  splitting.md  validation.md  writing.md
eval/: FINDINGS.md  README.md  __init__.py  generate_corpus.py  reference_rules.py  run_eval.py
examples/: demo_color_balance.py  demo_converter.py  demo_diff.py  demo_element_aviti.py  demo_filter.py  demo_index_utils.py  demo_merger.py  demo_splitter.py  demo_writer.py  parse_examples.py
examples/sample_sheets/: ProjectAlpha_SampleSheet.csv  ProjectBeta_SampleSheet.csv  ProjectDelta_SampleSheet_collision.csv  ProjectGamma_SampleSheet.csv  README.md  combined_clean.csv  combined_collision_forced.csv  combined_mixed_formats.csv  element_aviti_RunManifest.csv  v1_multi_lane.csv  v1_single_index.csv  v1_with_lab_qc_settings.csv  v1_with_manifests.csv  v2_nextseq_single_index.csv  v2_with_cloud_settings.csv  v2_with_index_umi.csv  v2_with_pipeline_settings.csv  v2_with_read_umi.csv
modules/nf-core/samplesheetparser/convert/: environment.yml  main.nf  meta.yml
modules/nf-core/samplesheetparser/convert/tests/: main.nf.test  tags.yml
modules/nf-core/samplesheetparser/diff/: main.nf  meta.yml
modules/nf-core/samplesheetparser/diff/tests/: main.nf.test  main.nf.test.snap  tags.yml
modules/nf-core/samplesheetparser/filter/: main.nf  meta.yml
modules/nf-core/samplesheetparser/filter/tests/: main.nf.test  tags.yml
modules/nf-core/samplesheetparser/info/: main.nf  meta.yml
modules/nf-core/samplesheetparser/info/tests/: main.nf.test  main.nf.test.snap  tags.yml
modules/nf-core/samplesheetparser/merge/: main.nf  meta.yml
modules/nf-core/samplesheetparser/merge/tests/: main.nf.test  tags.yml
modules/nf-core/samplesheetparser/split/: main.nf  meta.yml
modules/nf-core/samplesheetparser/split/tests/: main.nf.test  tags.yml
modules/nf-core/samplesheetparser/validate/: main.nf  meta.yml
modules/nf-core/samplesheetparser/validate/tests/: main.nf.test  main.nf.test.snap  tags.yml
recipes/: meta.yaml
samplesheet_parser/: __init__.py  chemistry.py  cli.py  converter.py  diff.py  enums.py  factory.py  filter.py  index_utils.py  instruments.py  merger.py  protocol.py  splitter.py  validators.py  writer.py
samplesheet_parser/parsers/: __init__.py  element.py  v1.py  v2.py
scripts/: demo_converter.py  demo_diff.py  demo_writer.py
tests/: conftest.py  test_chemistry.py  test_cli.py  test_converter.py  test_diff.py  test_eval.py  test_factory.py  test_filter.py  test_index_utils.py  test_instruments.py  test_merger.py  test_reference_rules.py  test_splitter.py  test_writer.py
tests/fixtures/: SampleSheet_v1_dual_index.csv  SampleSheet_v2_dual_index.csv  SampleSheet_v2_modified.csv
tests/test_parsers/: test_element.py  test_v1.py  test_v2.py
tests/test_validators/: test_hamming.py  test_validators.py
