[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samplesheet-parser"
version = "0.1.3"
description = "Format-agnostic parser for Illumina SampleSheet.csv files — supports IEM V1 and BCLConvert V2"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Chaitanya Kasaraneni", email = "kc.kasaraneni@gmail.com" }]
keywords = [
    "illumina", "samplesheet", "bclconvert", "bcl2fastq", "ngs",
    "genomics", "bioinformatics", "demultiplexing", "sequencing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage      = "https://github.com/chaitanyakasaraneni/samplesheet-parser"
Documentation = "https://illumina-samplesheet.readthedocs.io"
Repository    = "https://github.com/chaitanyakasaraneni/samplesheet-parser"
Issues        = "https://github.com/chaitanyakasaraneni/samplesheet-parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["samplesheet_parser"]

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=samplesheet_parser --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["samplesheet_parser"]
omit   = ["*/tests/*", "*/examples/*"]
