[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samplesheet-parser"
version = "1.0.0"
description = "Format-agnostic parser for Illumina SampleSheet.csv files — supports IEM V1 and BCLConvert V2"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Chaitanya Kasaraneni", email = "kc.kasaraneni@gmail.com" }]
keywords = [
    "illumina", "samplesheet", "bclconvert", "bcl2fastq", "ngs",
    "genomics", "bioinformatics", "demultiplexing", "sequencing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7",
]

[project.optional-dependencies]
cli = ["typer>=0.9"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "typer>=0.9",
]

[project.scripts]
samplesheet = "samplesheet_parser.cli:main"

[project.urls]
Homepage      = "https://github.com/chaitanyakasaraneni/samplesheet-parser"
Documentation = "https://illumina-samplesheet.readthedocs.io"
Repository    = "https://github.com/chaitanyakasaraneni/samplesheet-parser"
Issues        = "https://github.com/chaitanyakasaraneni/samplesheet-parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["samplesheet_parser"]

[tool.black]
line-length    = 100
target-version = ["py312"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"samplesheet_parser/__init__.py" = ["E402"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=samplesheet_parser --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["samplesheet_parser"]
omit   = ["*/tests/*", "*/examples/*"]
